kubernetes/apps/dev/coder/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
  namespace: coder
spec:
  parentRefs:
    - name: main
      namespace: network
  hostnames:
    - "coder.goyangi.io"
    - "*.coder.goyangi.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: coder
          port: 80
